# space_mining

./: .gitignore  .nojekyll  ARCHITECTURAL_SEPARATION.md  COSMIC_IMPLEMENTATION_SUMMARY.md  FINAL_PERFECT_COSMIC_BALANCE.md  LICENSE  Makefile  PERFECT_COSMIC_HARMONY_SUMMARY.md  README.md  TEST_RESULTS.md  getting_started.ipynb  hf_model_card_template.md  index.html  pyproject.toml  requirements.txt  test_animations.py  validate_enhancements.py  validate_final_cosmic_implementation.py  validate_ui_polish.py
.github/workflows/: release.yml  run-pytest.yml  train-long-wandb-hf.yml
docs/: README.md  _sidebar.md  authors.md  contributing.md  environment_details.md  examples.md  faq.md  gymnasium.md  index.html  installation.md  reproducibility.md  stable-baseline3.md  training_tips.md
examples/: 01_quickstart_random_agent.py  02_train_ppo.py  03_generate_gif.py  04_load_from_hf_and_render.py
space_mining/: __init__.py
space_mining/agents/: __init__.py  callbacks.py  ppo_agent.py  train_ppo.py
space_mining/agents/train/: __init__.py
space_mining/envs/: __init__.py  renderer.py  space_mining.py  wrappers.py
space_mining/scripts/: make_gif.py  render_episode.py
tests/: README.md  conftest.py  test_actual_save_gif.py  test_basic_functionality.py  test_env_creation.py  test_env_dynamics.py  test_env_render.py  test_env_spaces.py  test_env_step.py  test_gif_core.py  test_gif_generation.py  test_integration.py  test_ppo_agent_learn.py  test_ppo_agent_load.py  test_ppo_agent_predict.py  test_real_save_gif.py  test_renderer.py
