[tool.poetry]
name = "space-mining"
version = "0.1.2"
description = "A Gymnasium-compatible environment for space mining reinforcement learning tasks"
authors = ["Xinning Zhu <zhuxinning@shu.edu.cn>", "Lunde Chen <lundechen@shu.edu.cn>"]
license = "MIT"
readme = "README.md"
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
gymnasium = "^0.29.1"
numpy = "^1.23.0"
pygame = "^2.5.2"
stable-baselines3 = "^2.0.0"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
black = "^23.7.0"
isort = "^5.12.0"
ruff = "^0.6.0"
pytest-cov = "^4.0.0"

[tool.ruff]
line-length = 100
target-version = "py310"
exclude = ["*.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
filterwarnings = [
  "ignore::DeprecationWarning",
]

[tool.coverage.run]
branch = true
source = ["space_mining"]
omit = ["space_mining/__init__.py"]

[tool.coverage.report]
show_missing = true
skip_covered = true
exclude_lines = [
  "pragma: no cover",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 